# fedimint-app

./: flake.nix  justfile  pubspec.yaml
.github/workflows/: android-release.yml
lib/: app.dart  create_wallet.dart  dashboard.dart  db.dart  discover.dart  ecash_send.dart  event_bus.dart  failure.dart  fed_preview.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  lib.freezed.dart  main.dart  multimint.dart  multimint.freezed.dart  number_pad.dart  onchain_receive.dart  onchain_send.dart  pay_preview.dart  payment_selector.dart  redeem_ecash.dart  refund.dart  request.dart  scan.dart  seed_input.dart  send.dart  setttings.dart  sidebar.dart  splash.dart  toast.dart  utils.dart
lib/screens/: dashboard.dart
lib/widgets/: addresses.dart  pending_deposit_item.dart  transactions_list.dart
rust/carbine_fedimint/: Cargo.toml
rust/carbine_fedimint/src/: db.rs  frb_generated.rs  lib.rs  multimint.rs  nostr.rs
scripts/: build-android.sh  build-arm-android.sh  build-linux.sh
