[package]
name = "carbine_fedimint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
bitcoin = { version = "0.32.5", features = ["serde"] }
fedimint-api-client = "0.7.0"
fedimint-bip39 = "0.7.0"
fedimint-core = "0.7.0"
fedimint-client = "0.7.0"
fedimint-derive-secret = "0.7.0"
fedimint-rocksdb = "0.7.0"
fedimint-ln-client = "0.7.0"
fedimint-lnv2-client = "0.7.0"
fedimint-lnv2-common = "0.7.0"
fedimint-ln-common = "0.7.0"
fedimint-meta-client = "0.7.0"
fedimint-mint-client = "0.7.0"
fedimint-wallet-client = "0.7.0"
flutter_rust_bridge = "=2.9.0"
futures-timer = "3.0.3"
futures-util = "0.3.30"
lightning-invoice = { version = "0.32.0", features = ["std"] }
lnurl-rs = { version = "0.9.0", default_features = false }
nostr-sdk = "0.41.0"
#reqwest = "0.12.15"
reqwest = { version = "0.12.15", features = [
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.2"
zstd = "=0.12.4"
zstd-sys = "=2.0.1+zstd.1.5.2"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}
