[package]
name = "carbine_fedimint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoin-payment-instructions = { version = "0.4.0", features = [ "http" ]}
fedimint-api-client = "0.7.2"
fedimint-bip39 = "0.7.2"
fedimint-core = "0.7.2"
fedimint-client = "0.7.2"
fedimint-derive-secret = "0.7.2"
fedimint-rocksdb = "0.7.2"
fedimint-ln-client = "0.7.2"
fedimint-lnv2-client = "0.7.2"
fedimint-lnv2-common = "0.7.2"
fedimint-ln-common = "0.7.2"
fedimint-meta-client = "0.7.2"
fedimint-mint-client = "0.7.2"
fedimint-wallet-client = "0.7.2"
flutter_rust_bridge = "=2.9.0"
futures-timer = "3.0.3"
futures-util = "0.3.30"
lightning-invoice = { version = "0.32.0", features = ["std"] } # Needs to match fedimint's lightning-invoice
lnurl-rs = { version = "0.9.0", default-features = false }
nostr-sdk = { version = "0.42.0", features = [ "nip04" ]}
reqwest = { version = "0.12.18", features = [
  "rustls-tls",
  "json",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}
